--- a/docs/native.adoc
+++ b/docs/native.adoc
@@ -5,7 +5,7 @@ Let’s now produce a native executable for our application. It improves the sta
 
 GraalVM is a universal virtual machine for compiling and running applications written in JavaScript, Python, Ruby, R, JVM-based languages like Java, Scala, Groovy, Kotlin, Clojure, and LLVM-based languages such as C and C++. It includes ahead-of-time compilation, aggressive dead code elimination, and optimal packaging as native binaries that moves a lot of startup logic to _build-time_, thereby reducing startup time and memory resource requirements significantly.
 
-image::[nativearch.png, native, 600]
+image::nativearch.png[native, 600]
 
 GraalVM is already installed for you. Inspect the value of the `GRAALVM_HOME` variable in the Terminal with:
 
