--- a/docs/messaging.adoc
+++ b/docs/messaging.adoc
@@ -50,7 +50,7 @@ We'll start by creating a new asynchronous endpoint. Open the `PersonResource` c
 ----
     @Inject EventBus bus; // <1>
 ----
-<1> Use _Assistant > Organize Imports, and be sure to import the correct `EventBus` class - which is `io.vertx.axle.core.eventbus.EventBus`. 
+<1> Use _Assistant > Organize Imports_, and be sure to import the correct `EventBus` class - which is `io.vertx.axle.core.eventbus.EventBus`. 
 
 Next, create two new endpoints in the same class which creates new people in our database given a name, and finds people by their name:
 
