--- a/docs/monitoring.adoc
+++ b/docs/monitoring.adoc
@@ -189,14 +189,14 @@ You'll need to trigger the methods that we've instrumented, so first run this co
 
 [source,sh,role="copypaste"]
 ----
-echo http://$(oc get route people -o=go-template --template='{{ .spec.host }}')/names.html
+echo http://$(oc get route people -o=go-template --template={% raw %}'{{ .spec.host }}'{% endraw %})/names.html
 ----
 
 Within a few seconds, Prometheus should start scraping the metrics. Run this command to output the URL to the Prometheus GUI:
 
 [source,sh,role="copypaste"]
 ----
-echo http://$(oc get route prometheus -o=go-template --template='{{ .spec.host }}')
+echo http://$(oc get route prometheus -o=go-template --template={% raw %}'{{ .spec.host }}'{% endraw %}')
 ----
 
 Open a separate browser tab and navigate to that URL. You should see:
@@ -231,7 +231,7 @@ image::https://grafana.com/api/dashboards/3308/images/2099/image[Grafana dashboa
 
 == Extra Credit after this workshop
 
-If you have time after completing this workshop, try running grafana and hooking it up to your Prometheus instance you've created. Hint: `oc new-app grafana/grafana && oc expose svc/grafana` and then access Grafana at the URL emitted by this command: `echo http://$(oc get route grafana -o=go-template --template='{{ .spec.host }}')`, add Prometheus as a data source at `http://prometheus:9090`, and create a custom dashboard showing some of your application metrics, or import an existing dashboard from the Grafana community.
+If you have time after completing this workshop, try running grafana and hooking it up to your Prometheus instance you've created. Hint: `oc new-app grafana/grafana && oc expose svc/grafana` and then access Grafana at the URL emitted by this command: `echo http://$(oc get route grafana -o=go-template --template={% raw %}'{{ .spec.host }}'{% endraw %})`, add Prometheus as a data source at `http://prometheus:9090`, and create a custom dashboard showing some of your application metrics, or import an existing dashboard from the Grafana community.
 
 == Cleanup
 
