--- a/docs/panache.adoc
+++ b/docs/panache.adoc
@@ -7,7 +7,7 @@ With Panache, we took an opinionated approach to make hibernate as easy as possi
 
 * By extending `PanacheEntity` in your entities, you will get an ID field that is auto-generated. If you require a custom ID strategy, you can extend `PanacheEntityBase` instead and handle the ID yourself.
 
-* By using Use public fields, there is no need for functionless getters and setters (those that simply get or set the field). You simply refer to fields like `Person.name` without the need to write a `Person.getName()` implementation. Panache will auto-generate any getters and setters you do not write, or you can develop your own getters/setters that do more than get/set, which will be called when the field is accessed directly.
+* By using Use public fields, there is no need for functionless getters and setters (those that simply get or set the field). You simply refer to fields like `person.name` without the need to write a `person.getName()` implementation. Panache will auto-generate any getters and setters you do not write, or you can develop your own getters/setters that do more than get/set, which will be called when the field is accessed directly.
 
 * The `PanacheEntity` superclass comes with lots of super useful static methods and you can add your own in your derived entity class, and much like traditional object-oriented programming it's natural and recommended to place custom queries as close to the entity as possible, ideally within the entity definition itself. Users can just start using your entity `Person` by typing `Person`, and getting completion for all the operations in a single place.
 
@@ -21,7 +21,7 @@ You may have wondered why we are using `people` in our Java APIs, and now you'll
 
 [source,sh,role="copypaste"]
 ----
-mvn quarkus:add-extension -Dextensions="panache, h2, postgresql, resteasy-jsonb"
+mvn quarkus:add-extension -Dextensions="panache, h2, jdbc-postgresql, resteasy-jsonb"
 ----
 
 We'll use the in-memory H2 database for local testing, and Postgres when we deploy to our production Kubernetes environment. So that's why we have added in the `h2` and `postgresql` extensions. `resteasy-jsonb` is used to encode JSON objects.
@@ -181,7 +181,7 @@ These statements will add some fake people to our database on startup.
 
 == Run the application
 
-Now we are ready to run our application. Using the command palette, select **Build and Run Locally** (if you had a previous app running, kbd:[CTRL+C] or close the old Terminal before running it again). You should see a bunch of log output that ends with:
+Now we are ready to run our application. Using the command palette, select **Start Live Coding** (if you had a previous app running, kbd:[CTRL+C] or close the old Terminal before running it again). You should see a bunch of log output that ends with:
 
 [source, none]
 ----
